--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -19,8 +27,16 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "5.10.19",
+    "mongoose": "^5.10.19",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.9.3"
+  },
+  "devDependencies": {
+    "@types/jest": "25.2.1",
+    "@types/supertest": "^2.0.10",
+    "jest": "25.2.7",
+    "mongodb-memory-server": "6.5.1",
+    "supertest": "^6.0.1",
+    "ts-jest": "25.3.1"
   }
 }
